Add user-promted resize feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Welcome to Etch-A-Sketch </h1>
     <div class="grid"></div>
+    <button class="size-button">Change grid size</button>
 </body>
 <script src="script.js"></script>
 </html>
